tests/rgs/semantic_errors/wrong_origin_condition.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
CONDITION is_tired MYSELF.
DURING ALWAYS:
    WHEN spotted ENVIRONMENT IF is_tired ENVIRONMENT:
        DO run.
